<resources>
    <string name="app_name">MovieBuzz</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="password_unmatch">Password UnMatch</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_success">"Login Success"</string>
    <string name="button">Sign Up</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Sign Up Here</string>
    <string name="registersubmit">Submit</string>
    <string name="prompt_password1">Confrim Password</string>
    <string name="title_1">Current Booking Status</string>
    <string name="header_title">Sandra Adams</string>
    <string name="header_text">sandra@gmail.com</string>
    <string name="textview">MovieBuzz</string>
    <string name="page_title">MovieBuzz</string>
    <string name="search">search</string>
    <string name="content_description_search">search</string>
    <string name="content_description_favorite">logout</string>
    <string name="logout">logout</string>
    <string name="favorite">logout</string>
    <string name = 'search_hint'>
        <font color='#ffffff'>Search For Location, Movies, &amp; Actors</font></string>
    <string name="title_3">Log Out</string>
    <string name="title_2">Transaction History</string>
    <string name="title_4">Settings</string>
    <string name="movieposter">MoviePoster</string>
    <string name="top_popular_movies">Top Popular Movies</string>
    <string name="SeeAll">See All</string>
    <string name="movieReviews">Top Reviews :</string>
    <string name="movieLanguages">Languages :</string>
    <string name="movieCountry">Country :</string>
    <string name="movieReleaseDate">Release Date</string>
    <string name="movieRuntime">Runtime :</string>
    <string name="movieAvalability">Avalability</string>
    <string name="movieWriters">Writers :</string>
    <string name="movieDirectors">Directors</string>
    <string name="movieCast">Cast :</string>
    <string name="movieDetails">Movie Details</string>
    <string name="moviePlot">Plot</string>
    <string name="reviewsPage">Reviews</string>
    <string name="fab_content_desc">floatbutton</string>
    <string name="addReview">Add Review</string>
    <string name="comment">Review</string>
    <string name="review">Review</string>
    <string name="helloo">Helloo</string>
    <string name="slider_desc">slider</string>
    <string name="rating">Rating</string>
    <string name="label">comment</string>
    <string name="Submit">Submit</string>
    <string name="text_label_1">bottom button</string>
    <string name="text_button">Book tickets</string>
    <string name="selectCity">Select City</string>
    <string name="selectCountry">Select Country</string>
    <string name="Get_Theaters">Get Theaters</string>
    <string name="TheaterName">Theater Name :</string>
    <string name="city">City :</string>
    <string name="Next">Next</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="pay">Pay</string>
    <string name="selected">Selected</string>
    <string name="Payment">Payment</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="ExpiryDate">ExpiryDate</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="postal_code">Postal Code</string>
    <string name="invalid_card_number">Card Number length must equal 16</string>
    <string name="invalid_card_name">Card Name length must be >6</string>
    <string name="invalid_postal_code">PostalCode length must be equal to 6</string>
    <string name="invalid_expiry_date">Expiry date must be in the Format of dd/mm/yyyy </string>
    <string name="invalid_cvv">Cvv length must be equal to 3</string>
    <string name="cancel">Cancel</string>
    <string name="signIn">Sign In</string>
    <string name="movieGenre">Genre</string>
    <string name="no_results_found">Sorry No Results Found</string>
    <string name="transactionHistory">TransactionHistory</string>
    <string name="bookingId">Booking Id :</string>
    <string name="paymentId">Payment Id :</string>
    <string name="bookingDate">Booking Date :</string>
    <string name="showTimings">Show Timings :</string>
    <string name="seatingData">Seating Details :</string>
    <string name="loginImage">loginImage</string>
    <string name="signInImage">SignInImage</string>

</resources>