<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="24dp"
    android:paddingTop="16dp">

    <ImageView
        android:id="@+id/animationView1"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_vanilla_1s_280px__2_"
        android:contentDescription="@string/signInImage" />

    <TextView
        android:id="@+id/responseData"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#5b39c6"
        android:textSize="14sp"
        android:textStyle="italic"
        android:visibility="invisible"
        tools:text="Name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input"
        style="@style/Widget.Shrine.TextInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        style="@style/Widget.Shrine.TextInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:visibility="invisible" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input1"
        style="@style/Widget.Shrine.TextInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password1"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/cancel"
            tools:ignore="RelativeOverlap"
            android:backgroundTint="@color/colorPrimaryDark"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_toStartOf="@id/cancel"
            android:backgroundTint="@color/colorPrimaryDark" />
    </RelativeLayout>
    </LinearLayout>
</ScrollView>
