<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/paymentFragment"
tools:context=".ui.payment.PaymentFragment">

<com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/topAppBar4"
    style="@style/Widget.MaterialComponents.Toolbar.Primary"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    app:contentInsetStartWithNavigation="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:title="@string/Payment"
    app:titleCentered="true"
    android:background="@color/colorPrimaryDark"
    tools:ignore="MissingConstraints">
</com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar4"
        tools:ignore="MissingConstraints">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardHolderName1"
            style="@style/Widget.Shrine.TextInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/card_holder_name"
            app:expandedHintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardHolderName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:textInputLayoutFocusedRectEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="-40dp"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:visibility="invisible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardNumber1"
            style="@style/Widget.Shrine.TextInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/card_number"
            app:expandedHintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:textInputLayoutFocusedRectEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cvv1"
                style="@style/Widget.Shrine.TextInputLayout1"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/cvv"
                app:expandedHintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cvv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:textInputLayoutFocusedRectEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expiryDate1"
                style="@style/Widget.Shrine.TextInputLayout1"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toEndOf="@+id/cvv1"
                android:hint="@string/ExpiryDate"
                app:expandedHintEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/expiryDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:textInputLayoutFocusedRectEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postalCode1"
                style="@style/Widget.Shrine.TextInputLayout1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toEndOf="@+id/expiryDate1"
                android:backgroundTint="@color/white"
                android:hint="@string/postal_code"
                app:expandedHintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postalCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:textInputLayoutFocusedRectEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <Button
                android:id="@+id/button_first1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/Submit"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>