<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bk"
    tools:context=".ui.addReview.AddReview">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar4"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/review_menu"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:title="@string/addReview"
        app:titleCentered="true"
        android:background="@color/colorPrimaryDark"
        tools:ignore="MissingConstraints">
    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar4"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">
        <TextView
            android:id="@+id/reviewResultValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center"
            android:visibility="invisible"
            tools:text="Name" />
        <TextView
            android:id="@+id/itemNameTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="start"
            android:text="@string/rating"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_marginStart="12dp"
            tools:ignore="MissingConstraints"
            tools:text="Name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingTop="12dp"
                android:paddingEnd="5dp"
                android:text="@string/rating"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="italic"
                tools:ignore="RtlSymmetry"
                tools:text="Name" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/rating_value"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/slider_desc"
                android:value="2.0"
                android:valueFrom="1.0"
                android:valueTo="10.0"
                app:thumbColor="@color/colorPrimaryDark"
                app:trackColor="@color/colorPrimaryDark"
                tools:ignore="MissingConstraints" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addComment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/review"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_margin="20dp"
            app:expandedHintEnabled="false"
            android:backgroundTint="@color/colorPrimaryDark"
            style="@style/Widget.Shrine.TextInputLayout1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:maxLines="10"
                android:gravity="top|left"
                android:backgroundTint="@color/colorPrimaryDark"
                app:textInputLayoutFocusedRectEnabled="true"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/reviewSubmit"
                style="@style/Widget.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/Submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginEnd="50dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>